Add Email Scheduler

--- a/ThreeS.Routine/appsettings.json
+++ b/ThreeS.Routine/appsettings.json
@@ -8,25 +8,39 @@
     "DbPrefix": "hostt_"
   },
   "Serilog": {
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "Microsoft": "Warning",
+        "System": "Warning",
+        "Hangfire": "Information"
+      }
+    },
     "WriteTo": [
       {
         "Name": "Async",
         "Args": {
           "configure": [
             {
-              "Name": "Console"
+              "Name": "Console",
+              "outputTemplate": "[{Timestamp:HH:mm:ss} {Level:u3}] {Message:lj}{NewLine}{Exception}"
             },
             {
               "Name": "File",
               "Args": {
-                "path": "log.txt",
-                "rollingInterval": "Day"
+                "path": "logs/log.txt",
+                "rollingInterval": "Day",
+                "outputTemplate": "{Timestamp:o} [{Level:u3}] ({Application}/{MachineName}/{ThreadId}) {Message}{NewLine}{Exception}"
               }
             }
           ]
         }
       }
-    ]
+    ],
+    "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ],
+    "Properties": {
+      "Application": "Routine Jobs"
+    }
   },
   "Logging": {
     "LogLevel": {
@@ -34,5 +48,12 @@
       "Hangfire": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "EmailSettings": {
+    "MailServer": "3shostt.net",
+    "MailPort": 25,
+    "SenderName": "Help Desk",
+    "Sender": "helpdesk@3shostt.net",
+    "Password": "3Shostt@5057"
+  }
 }
