--- a/ThreeS.Routine/ThreeS.Routine.csproj
+++ b/ThreeS.Routine/ThreeS.Routine.csproj
@@ -21,6 +21,7 @@
     <PackageReference Include="Serilog.Settings.Configuration" Version="3.1.0" />
     <PackageReference Include="Serilog.Sinks.Async" Version="1.4.0" />
     <PackageReference Include="Serilog.Sinks.RollingFile" Version="3.3.0" />
+    <PackageReference Include="Serilog.Sinks.SQLite" Version="5.0.0" />
   </ItemGroup>
 
 
